fix spacing for left menu

--- a/app/assets/stylesheets/style.styl
+++ b/app/assets/stylesheets/style.styl
@@ -154,7 +154,7 @@ body h1, h2, h3, h4, h5
   z-index  10
   width    180px
   position absolute
-  left     5px
+  left     10px
   top      165px
   right    0
 
